--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Private npm",
   "main": "index.js",
   "scripts": {
-    "start": "sinopia --listen $port"
+    "start": "node server.js"
   },
   "author": "Jakob Viskum Damgaard",
   "license": "ISC",
