Added jvdamgaard as user

--- a/config.yaml
+++ b/config.yaml
@@ -67,7 +67,7 @@ packages:
     allow_access: $all
 
     # allow 'admin' to publish packages
-    allow_publish: admin
+    allow_publish: admin;jvdamgaard
 
     # if package is not available locally, proxy requests to 'npmjs' registry
     proxy: npmjs
