All can read because of builds etc.

--- a/config.yaml
+++ b/config.yaml
@@ -64,7 +64,7 @@ packages:
     #
     # you can specify usernames/groupnames (depending on your auth plugin)
     # and three keywords: "$all", "$anonymous", "$authenticated"
-    allow_access: $authenticated
+    allow_access: $all
 
     # allow 'admin' to publish packages
     allow_publish: $authenticated
